--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "@testing-library/dom": "latest",
     "@testing-library/react": "latest",
     "autoprefixer": "^10.4.20",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "latest",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -75,7 +74,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19.1.2",
