--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/core": "latest",
-    "@aws-sdk/credential-providers": "latest",
+    "@auth/core": "^0.18.6",
     "@hookform/resolvers": "^3.9.1",
-    "@mongodb-js/zstd": "latest",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -29,7 +27,7 @@
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.2",
-    "@radix-ui/react-scroll-area": "latest",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slider": "^1.2.2",
@@ -40,8 +38,6 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@testing-library/dom": "latest",
-    "@testing-library/react": "latest",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -49,24 +45,17 @@
     "cmdk": "1.0.4",
     "date-fns": "^3.3.1",
     "embla-carousel-react": "8.5.1",
-    "gcp-metadata": "latest",
-    "input-otp": "1.4.1",
-    "kerberos": "latest",
     "lucide-react": "^0.454.0",
-    "mongodb": "^6.15.0",
-    "mongodb-client-encryption": "latest",
-    "next": "^15.2.4",
-    "next-auth": "^4.24.11",
+    "mongodb": "^6.3.0",
+    "next": "^14.1.0",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.4.4",
-    "nodemailer": "latest",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
-    "snappy": "latest",
-    "socks": "latest",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -75,11 +64,11 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^22.14.1",
-    "@types/react": "^19.1.1",
-    "@types/react-dom": "^19.1.2",
-    "postcss": "^8",
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "postcss": "^8.4.35",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.3"
+    "typescript": "^5.3.3"
   }
 }
